init web interface

--- a/appproject/app/src/main/res/values/strings.xml
+++ b/appproject/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">yuelaoge</string>
+    <string name="app_name">月老阁</string>
     <string name="title_login">登录</string>
     <string name="title_regist">注册</string>
 
