--- a/appproject/app/src/main/res/values/strings.xml
+++ b/appproject/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="error_invalid_phone">手机号格式不正确</string>
     <string name="error_incorrect_password">密码错误</string>
     <string name="error_field_required">此处不能为空</string>
+    <string name="error_field_invalid">数据格式不正确</string>
 </resources>
