--- a/appproject/app/src/main/res/values/strings.xml
+++ b/appproject/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">月老阁</string>
     <string name="title_login">登录</string>
     <string name="title_regist">会员注册</string>
+    <string name="title_detail">会员详情</string>
 
     <!-- Strings related to login -->
     <string name="prompt_phone">手机号</string>
